[tool.poetry]
name = "kubeflowengine"
version = "0.1.0"
description = ""
authors = ["ChaejinE <joung6517@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13.0"
kfp = "2.9.0"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.test_component]
cmd = "python -m unittest test_component.py"
help = "CLI to test component's unittest"
